# churn-prediction

./: .gitignore  README.md  TESTING.md  pyproject.toml
_archive/: README.md  evaluate_rule_model_v2.py
_archive/results_v2/: threshold_sweep_validation.csv
_archive/results_v3_optimized/: grid_search_results.csv
docs/diagrams/: end-to-end-workflow.md
experiments/: __init__.py  artifacts.py  config.py  create_evaluation_dataset.py  evaluate_rule_model.py  evaluate_rule_model_v3.py  evaluate_rule_model_v3_optimized.py  evaluator.py  features.py  logger.py  run.py  runner.py
experiments/configs/: baseline.yaml  v3_features.yaml  v3_optimized.yaml
experiments/results/: evaluation_report.csv  threshold_sweep.csv
experiments/results_v2/: evaluation_report.csv
experiments/results_v3/: evaluation_report_v3.csv  threshold_sweep_v3.csv
experiments/results_v3_optimized/: final_results.csv  optimized_weights.csv
model/: __init__.py  config.py  schemas.py  scorer.py
model/components/: __init__.py  base.py  blueprint.py  contract.py  financial.py  tenure.py  tier.py  urgency.py
tests/: __init__.py  conftest.py  test_components.py  test_data_quality.py  test_integration.py  test_ml_quality.py  test_production.py  test_regression.py  test_scorer.py
tests/fixtures/: baseline_metrics.json
